syntax = "proto3";

package distribicom_boot;

message DistribicomConfigs {
  // encryption params
  string scheme = 1;
  uint32 polynomial_degree = 2;
  uint32 logarithm_plaintext_coefficient = 3;

  // for PIR params
  uint64 db_capacity = 4;
  uint64 size_per_element = 5; // element represents a position inside the plaintext that a user can write to.
  uint32 dimensions = 6; // in our case defaults eqauls to 2.
};

message AppConfigs{
  DistribicomConfigs configs = 1;
  bool UseRegularMessages = 2;
}